# election

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .yamllint  README.rst  configuration.yaml  events.yaml  exceptions.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.zuul.d/: jobs.yaml  project.yaml
candidates/2024.1/Adjutant/: dale@catalystcloud.nz
candidates/2024.1/Barbican/: xek@redhat.com
candidates/2024.1/Blazar/: pierre@stackhpc.com
candidates/2024.1/Cinder/: rajatdhasmana@gmail.com
candidates/2024.1/Cloudkitty/: rafael@apache.org
candidates/2024.1/Designate/: johnsomor@gmail.com
candidates/2024.1/Freezer/: ge.cong@zte.com.cn
candidates/2024.1/Glance/: pdeore@redhat.com
candidates/2024.1/Heat/: tkajinam@redhat.com
candidates/2024.1/Horizon/: manchandavishal143@gmail.com
candidates/2024.1/Ironic/: jay@jvf.cc
candidates/2024.1/Keystone/: dwilde@redhat.com
candidates/2024.1/Kolla/: mnasiadka@gmail.com
candidates/2024.1/Kuryr/: gryf73@gmail.com
candidates/2024.1/Magnum/: jake.yip@unimelb.edu.au
candidates/2024.1/Manila/: ces.eduardo98@gmail.com
candidates/2024.1/Masakari/: suzhengwei@inspur.com
candidates/2024.1/Murano/: aaronzhu1121@gmail.com
candidates/2024.1/Neutron/: haleyb.dev@gmail.com
candidates/2024.1/Nova/: sbauza@redhat.com
candidates/2024.1/Octavia/: gthiemon@redhat.com
candidates/2024.1/OpenStackAnsible/: noonedeadpunk@gmail.com
candidates/2024.1/OpenStackSDK/: artem.goncharov@gmail.com
candidates/2024.1/OpenStack_Charms/: felipe.reyes@canonical.com
candidates/2024.1/OpenStack_Helm/: kozhukalov@gmail.com  mnaser@vexxhost.com
candidates/2024.1/Puppet_OpenStack/: tkajinam@redhat.com
candidates/2024.1/Quality_Assurance/: mkopec@redhat.com
candidates/2024.1/Solum/: aaronzhu1121@gmail.com
candidates/2024.1/Storlets/: tkajinam@redhat.com
candidates/2024.1/Swift/: tburke@nvidia.com
candidates/2024.1/TC/: dms@danplanet.com  frickler@offenerstapel.de  gmann@ghanshyammann.com  gsteinmuller@vexxhost.com  jay@jvf.cc
candidates/2024.1/Tacker/: yasufum.o@gmail.com
candidates/2024.1/Telemetry/: jokke@usr.fi
candidates/2024.1/Vitrage/: noonedeadpunk@gmail.com
candidates/2024.1/Watcher/: chen.ke14@zte.com.cn
candidates/2024.1/Zaqar/: sxmatch1986@gmail.com
candidates/2024.1/Zun/: hongbin034@gmail.com
candidates/2024.2/Adjutant/: dale@catalystcloud.nz
candidates/2024.2/Barbican/: xek@redhat.com
candidates/2024.2/Blazar/: pierre@stackhpc.com
candidates/2024.2/Cinder/: jobernar@redhat.com
candidates/2024.2/Cloudkitty/: rafael@apache.org
candidates/2024.2/Cyborg/: songwenping@inspur.com
candidates/2024.2/Designate/: johnsomor@gmail.com
candidates/2024.2/Glance/: pdeore@redhat.com
candidates/2024.2/Heat/: kajinamit@oss.nttdata.com
candidates/2024.2/Horizon/: t.v.ovtchinnikova@gmail.com
candidates/2024.2/Ironic/: elfosardo@gmail.com
candidates/2024.2/Keystone/: dwilde@redhat.com
candidates/2024.2/Kolla/: mnasiadka@gmail.com
candidates/2024.2/Magnum/: jake.yip@ardc.edu.au
candidates/2024.2/Manila/: ces.eduardo98@gmail.com
candidates/2024.2/Masakari/: suzhengwei@inspur.com
candidates/2024.2/Mistral/: avanzaghi.osf@axellink.fr
candidates/2024.2/Monasca/: hasan.acar@tubitak.gov.tr
doc/: requirements.txt
doc/source/: candidates  conf.py  index.rst  ocata_ptl_candidates.rst  ocata_ptl_results.rst
openstack_election/: __init__.py  check_candidacy.py  config.py  exception.py  owners.py  require_py3.py  utils.py  yamlutils.py
openstack_election/cmds/: change_owners.py  check_all_candidacies.py  check_candidacy.py  check_manual.py  ci_check_all_candidate_files.py  close_election.py  create_directories.py  generate_rolls.py  render_statistics.py  search_rolls.py  setup_election_config.py  template_emails.py  update_governance.py  update_releases_calendar.py
openstack_election/templates/: combined_campaigning_kickoff.j2  combined_election_season.j2  combined_end_nominations.j2  combined_nominations_direct_reminder.j2  combined_nominations_kickoff.j2  combined_nominations_last_days.j2  combined_voting_kickoff.j2  combined_voting_last_days.j2  combined_voting_optin_civs.j2  combined_voting_optin_civs_direct_reminder.j2  ptl_election_season.j2  ptl_end_nominations.j2  ptl_nominations_direct_reminder.j2  ptl_nominations_kickoff.j2  ptl_nominations_last_days.j2  ptl_voting_kickoff.j2  ptl_voting_last_days.j2  ptl_voting_optin_civs.j2  tc_campaigning_kickoff.j2  tc_election_season.j2  tc_end_nominations.j2  tc_nominations_kickoff.j2  tc_nominations_last_days.j2  tc_voting_kickoff.j2  tc_voting_last_days.j2  tc_voting_optin_civs.j2  tc_voting_optin_civs_direct_reminder.j2
openstack_election/tests/: base.py  fixtures.py  test_sorting.py  test_utils.py
tools/: check-candidacy.py  check-new-candidacy.py  check_candidacy.py  generate-rolls.sh  new-election.py  ptl-election-summary.py  render-wiki-list.py  tc-election-summary.py  utils.py
(+1212 files in other folders)
