[metadata]
name = openstack-election
summary = OpenStack Election Documents
description-file = README.rst
author = OpenStack Election Officials
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = openstack_election

[entry_points]
console_scripts =
    check-all-candidacies = openstack_election.cmds.check_all_candidacies:main
    check-candidacy = openstack_election.cmds.check_candidacy:main
    check-candidacy-manual = openstack_election.cmds.check_manual:main
    render-statistics = openstack_election.cmds.render_statistics:main
    update-governance = openstack_election.cmds.update_governance:main
    close-election = openstack_election.cmds.close_election:main
    search-rolls = openstack_election.cmds.search_rolls:main
    create-directories = openstack_election.cmds.create_directories:main
    generate-rolls = openstack_election.cmds.generate_rolls:main
    owners = openstack_election.cmds.change_owners:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html

[pbr]
warnerrors = True
