[metadata]
name = openstack-election
summary = OpenStack Election Documents
description_file = README.rst
author = OpenStack Election Officials
author_email = openstack-discuss@lists.openstack.org
home_page = https://governance.openstack.org/election/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    openstack_election
    openstack_election.templates

[entry_points]
console_scripts =
    ci-check-all-candidate-files = openstack_election.cmds.ci_check_all_candidate_files:main
    check-all-candidacies = openstack_election.cmds.check_all_candidacies:main
    check-candidacy = openstack_election.cmds.check_candidacy:main
    check-candidacy-manual = openstack_election.cmds.check_manual:main
    render-statistics = openstack_election.cmds.render_statistics:main
    update-governance = openstack_election.cmds.update_governance:main
    close-election = openstack_election.cmds.close_election:main
    search-rolls = openstack_election.cmds.search_rolls:main
    create-directories = openstack_election.cmds.create_directories:main
    generate-rolls = openstack_election.cmds.generate_rolls:main
    owners = openstack_election.cmds.change_owners:main
    template-emails = openstack_election.cmds.template_emails:main
    setup-election-config = openstack_election.cmds.setup_election_config:main
